feat(api): list dictionary draft items
